--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -178,9 +178,9 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/myProfile_signin_CardView"
-                android:layout_width="320dp"
-                android:layout_height="120dp"
-                app:cardBackgroundColor="#d4bff9  "
+                android:layout_width="280dp"
+                android:layout_height="160dp"
+                app:cardBackgroundColor="#E3E3E3"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -188,34 +188,34 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.38">
 
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="8dp"
+                    android:paddingTop="4dp"
+                    android:text="You are not Signed In."
+                    android:textAlignment="viewStart"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
                     <Button
                         android:id="@+id/myProfile_signin_button"
-                        android:layout_width="150dp"
-                        android:layout_height="80dp"
-                        android:backgroundTint="#6002EE"
-                        android:text="Sign In"
+                        android:layout_width="220dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:backgroundTint="#4E4D4E"
+                        android:text="Sign in to your Account"
                         android:textColor="#FFFFFF"
                         android:textSize="24sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sign in to your Account"
-                        android:textColor="#021aee"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="@+id/myProfile_signin_button"
-                        app:layout_constraintStart_toStartOf="@+id/myProfile_signin_button"
-                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
