--- a/app/src/main/res/layout/activity_camera2.xml
+++ b/app/src/main/res/layout/activity_camera2.xml
@@ -13,7 +13,7 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/cameraActivity_viewFinder"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
