--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/myJobsFragment"
-        android:name="com.example.quickjobs.view.jobs.MyJobsFragment"
+        android:name="com.example.quickjobs.view.profile.MyJobsFragment"
         android:label="fragment_my_jobs"
         tools:layout="@layout/fragment_my_jobs">
         <action
