--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -152,19 +152,55 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-                        <ImageView
-                            android:id="@+id/newPost_image1_imageView"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/baseline_image_black_48"
-                            android:visibility="gone" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                        <ImageButton
-                            android:id="@+id/newPost_imageButton1_imageButton"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:backgroundTint="@color/cardview_shadow_end_color"
-                            android:src="@drawable/baseline_add_black_36" />
+                            <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent">
+
+                                <ImageButton
+                                    android:id="@+id/newPost_imageButton1_imageButton"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    android:backgroundTint="@color/cardview_shadow_end_color"
+                                    android:src="@drawable/baseline_add_black_36" />
+
+                                <ImageView
+                                    android:id="@+id/newPost_image1_imageView"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/baseline_image_black_48"
+                                    android:visibility="gone" />
+                            </FrameLayout>
+
+                            <FrameLayout
+                                android:id="@+id/newPost_secondImage_FrameLayout"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:visibility="gone">
+
+                                <ImageView
+                                    android:id="@+id/newPost_image2_imageView"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    android:scaleType="centerCrop"
+                                    android:src="@drawable/baseline_image_black_48"
+                                    android:visibility="gone" />
+
+                                <ImageButton
+                                    android:id="@+id/newPost_imageButton2_imageButton"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    android:backgroundTint="@color/cardview_shadow_end_color"
+                                    android:src="@drawable/baseline_add_black_36" />
+                            </FrameLayout>
+
+                        </LinearLayout>
+
                     </FrameLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
